# demo_ui_tests_selene

./: .gitignore  .pylintrc  README.md  pyproject.toml
app/: app.py
components/staya/: cart_rightside_menu.py  header_menu.py
components/staya_dog/: cart_rightside_menu.py  header_menu.py
data/: auth_data.py
locators/components/: cart_rightside_locators.py  header_menu_locators.py
locators/pages/: authorization_locators.py  catalog_locators.py  checkout_locators.py  product_locators.py  profile_locators.py  staya_main_locators.py
pages/: base_page.py
pages/staya_dog/: authorization_page.py  catalog_page.py  checkout_page.py  main_page.py  product_page.py  profile_page.py
schemas/: user.py
tests/: conftest.py  test_authorization.py  test_cart.py  test_catalog_filters.py
utils/: base_session.py
utils/notifications/: config.json
